--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ jansi = "2.4.1"
 
 shadow = "8.1.1"
 plugindescription = "0.6.0"
-paperweight = "1.7.7"
+paperweight = "2.0.0-beta.14"
 
 [plugins]
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow"}
